--- a/app/views/families/_family-form.html.erb
+++ b/app/views/families/_family-form.html.erb
@@ -1,7 +1,7 @@
 <div class="container col-6">
   <h1>Register Your Family</h1>
   <%= simple_form_for @family do |f| %>
-    <%= f.input :name %>
+    <%= f.input :name, required: true %>
     <!-- User shouldnt be able to validate if form is blank-->
     <%= f.submit "Submit", class:"btn btn-info my-3" %>
     <!-- When user validates, the user should stay on the same page-->
