--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -2,7 +2,14 @@
   <h1>Register a new Dog</h1>
   <%= simple_form_for(@dog) do |f| %>
     <%= f.input :name %>
-    <%= f.input :breed %>
+    <div class="form-group">
+      <%= form.label :breed, "Search for Dog Breed:" %>
+      <%= form.text_field :breed_search, placeholder: "Enter breed name", class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= form.submit "Add Dog", class: "btn btn-primary" %>
+    </div>
+    <%= render 'form', dog: @dog %>
     <%= f.input :birthdate %>
     <%= f.input :sex %>
     <%= f.input :allergies %>
